homework_firstjob_done

--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,5 +1,5 @@
 <h2>Photo's Details</h2>
 
-<img src="<%= FILLER %>">
+<img src="<%= @specificphoto.source %>">
 
-<p><%= CAPTION FILLER %></p>
+<p><%= @specificphoto.caption %></p>
