--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -3,7 +3,7 @@
 <form action = "http://localhost:3000/photos/save_edit/<%= @pic_id %>">
   <div>
     <label>Caption:</label>
-    <input name = "caption" type = "text" value = <%= @caption %>>
+    <input name = "caption" type = "text" value = "<%= @caption %>">
   </div>
 
   <div>
@@ -12,7 +12,7 @@
 
   <div>
     <label>Image URL:</label>
-    <input name = "source" type = "text" value = <%= @source %> >
+    <input name = "source" type = "text" value = "<%= @source %>" >
     <button>Save Edit</button>
   </div>
 
