--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -2,9 +2,12 @@
 
 <h1></h1>
 
-<img src="<%= @source %>" >
+<img src="<%= @source %>" width = "720">
 
+<p>
 <%= @caption %>
+</p>
+
 <a href="http://localhost:3000/photos/">Back</a>
 <a href="http://localhost:3000/photos/<%= @pic_id %>/edit">Edit</a>
 <a href="http://localhost:3000/delete_photo/<%= @pic_id %>">Delete</a>
