--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,7 +1,21 @@
-<h1>Photo Details</h1>
+<h1> Edit Photo </h1>
 
-<p> <img src="<%= @photo %>" width="80"> </p>
+<form action="/update_photo/:id">
 
+  <div>
+    <label for="photo_caption">Caption:</label>
+    <input id="@photo_caption" type="text" name="the_caption" value=" ">
+  </div>
 
+  <div>
+    <label for="photo_image_url">Image URL:</label>
+    <input id="photo_image_url" type="text" name="the_source" value=" ">
+  </div>
 
+  <div>
 
+  <button>
+  <a href="http://localhost:3000/photos">Update Photo</a> </button>
+  </div>
+
+</form>
