--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -18,7 +18,10 @@
   <tr>
     <td>
       <a href="http://localhost:3000/photos/">Back</a>
+      <a href="http://localhost:3000/delete_photo/<%= params[:id] %>">Delete</a>
     </td>
+
+
   </tr>
 
 </table>
