--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -18,6 +18,7 @@
   <tr>
     <td>
       <a href="http://localhost:3000/photos/">Back</a>
+      <a href="http://localhost:3000/photos/<%= params[:id] %>/edit">Edit</a>
       <a href="http://localhost:3000/delete_photo/<%= params[:id] %>">Delete</a>
     </td>
 
