--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -2,7 +2,7 @@
 
 <a href="http://localhost:3000/photos/new">Add a New Photo</a>
 
-<table>
+<table class="table table-striped">
   <tr>
     <th>Thumbnail</th>
     <th>Caption</th>
