--- a/app/views/photos/edit_form.html.erb
+++ b/app/views/photos/edit_form.html.erb
@@ -1,9 +1,10 @@
 <h1>Kindly edit your photo</h1>
+<h2> <%= @photo.caption %> </h2>
 
 <form action="http://localhost:3000/update_photo/<%= @photo.id %>">
   <div>
     <label for="photo_caption">Caption:</label>
-    <input id="photo_caption" type="text" name="the_caption" value= <%= @photo.caption %> >
+    <input id="photo_caption" type="text" name="the_caption" value= "<%= @photo.caption %>" >
   </div>
   <div>
     <label for="photo_image_url">Image URL:</label>
