--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -4,11 +4,12 @@
 <img src="<%= @source %>" align= "middle" width="720">
 </center> </h2>
 
-<table>
+<table class="table table-condensed">
   <tr>
   <td>
       <a href="http://localhost:3000/photos">Back</a>
     </td>
+
     <td>
       <a href="http://localhost:3000/photos/<%= @id %>/edit">Edit</a>
     </td>
