second_update_finalize_show_view

--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -7,8 +7,8 @@
 <table>
   <tr>
     <td><a href="http://localhost:3000/photos/">Back</a></td>
-    <td>Edit</td>
-    <td>Delete</td>
+    <td><a href="http://localhost:3000/photos/<%= @id %>/edit">Edit</a></td>
+    <td><a href="http://localhost:3000/delete_photo/<%= @id %>">Delete</a></td>
   </tr>
 
 </table>
