--- a/app/views/photos/edit.html.erb
+++ b/app/views/photos/edit.html.erb
@@ -1,21 +1,25 @@
 <h1> Edit Photo </h1>
 
-<form action="/update_photo/:id">
+<p> <img src="<%= @p.source %>" width="720"> </p>
+
+
+<form action="/update_photo/<%= @p.id %>">
 
   <div>
     <label for="photo_caption">Caption:</label>
-    <input id="@photo_caption" type="text" name="the_caption" value=" ">
+    <input id="@photo_caption" type="text" name="the_caption" value=" <%= @p.caption %>">
   </div>
 
   <div>
     <label for="photo_image_url">Image URL:</label>
-    <input id="photo_image_url" type="text" name="the_source" value=" ">
+    <input id="photo_image_url" type="text" name="the_source" value=" <%= @p.source %>">
   </div>
 
   <div>
 
-  <button>
-  <a href="http://localhost:3000/photos">Update Photo</a> </button>
+  <button>Update Photo
+  <!-- <a href="http://localhost:3000/photos">Update Photo</a> -->
+  </button>
   </div>
 
 </form>
