--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -5,7 +5,7 @@
 <p> <%= @photo.caption %></p>
 
 <a href="/photos">Back</a>
-<a href="/photos/:id/edit">Edit</a>
-<a href="/delete_photo/:id">Delete</a>
+<a href="/photos/<%= @photo.id %>/edit">Edit</a>
+<a href="/delete_photo/<%= @photo.id %>">Delete</a>
 
 
