--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -13,4 +13,10 @@
       <%= @photo.caption %>
     </td>
   </tr>
+
+  <tr>
+    <td>
+      <a href="http://localhost:3000/photos">Back to Index</a>
+    </td>
+  </tr>
 </table>
